tests/negative/traits/non_virtual_call_dyn_value.orng
// non_virtual_call_dyn_value.orng:10:14: error: cannot invoke non-virtual method `get` of trait `Value` through dyn value
//     dyn_val.>get()
//             ^
// 
trait Value { fn get(&self) -> Int }
impl Value for Int { fn get(&self) -> Int { self^ } }

fn use_dyn[T: Value](x: &T) -> Int {
    let dyn_val: &dyn Value = &x
    dyn_val.>get()
}

fn main() -> Int {
    let val = 381
    use_dyn[Int](&val)
}